--- a/Team-Mem/src/main/webapp/WEB-INF/views/include/sidebar.jspf
+++ b/Team-Mem/src/main/webapp/WEB-INF/views/include/sidebar.jspf
@@ -5,11 +5,11 @@
 
 <div class="side">
 	<ul>
-		<li>회원권관리 
-		<li>회원등록 
-		<li>강사등록 
-		<li>수업등록 
-		<li>스케줄관리 
+		<li>회원권 
+		<li>회원관리  
+		<li>강사관리  
+		<li>수업관리  
+		<li>일정관리 
 		<li>공지사항 
 		<li>설정 
 	</ul>
