--- a/Team-Mem/src/main/webapp/WEB-INF/views/include/head.jspf
+++ b/Team-Mem/src/main/webapp/WEB-INF/views/include/head.jspf
@@ -27,5 +27,10 @@
 		color:inherit;
 	}
 </style>
-<link rel="stylesheet" href="${rootPath}/static/css/main.css?2024-04-11-028">
+<link rel="stylesheet" href="${rootPath}/static/css/main.css?2024-04-12-005">
+<script>
+ 	const rootPath = "${rootPath}"
+</script>
+<script src="${rootPath}/static/js/main.js?2024-04-12-002"></script>
+
 </head>
