--- a/Team-Mem/src/main/webapp/WEB-INF/views/include/head.jspf
+++ b/Team-Mem/src/main/webapp/WEB-INF/views/include/head.jspf
@@ -32,5 +32,6 @@
  	const rootPath = "${rootPath}"
 </script>
 <script src="${rootPath}/static/js/main.js?2024-04-12-002"></script>
+<script src="${rootPath}/static/js/teacher.js?2024-04-15-003"></script>
 
 </head>
