--- a/Team-Mem/src/main/webapp/WEB-INF/views/include/header.jspf
+++ b/Team-Mem/src/main/webapp/WEB-INF/views/include/header.jspf
@@ -6,9 +6,9 @@
 <div class="header">
 	<h3>맴맴</h3>
 <nav class="nav">
-	<ul>
-		<li>로그인
-		<li>회원가입
-	</ul>
+	
+		<a href="${rootPath }/main/login">로그인</a>
+		<a href="${rootPath}/main/join">회원가입</a>
+	
 </nav>
 </div>
