--- a/Team-Mem/src/main/webapp/static/css/main.css
+++ b/Team-Mem/src/main/webapp/static/css/main.css
@@ -5,36 +5,30 @@ div.header {
     align-items: center;
     padding: 8px;
     text-align: left;
-    background-color: #f1c960;
-    color: #3c2406;
+    background-color: #313749;
+    color: #77808b;
 }
 
 nav.nav {
     margin-left: auto;
-    ul {
-        list-style: none;
-        display: flex;
-
-        li {
-            margin: 8px;
-            font-size: 0.9rem;
-            color: #3c2406;
-        }
+    a {
+        margin: 8px;
+        font-size: 0.9rem;
+        color: #bec7d5;
     }
 }
 
 div.main {
     display: flex;
     height: 100%;
-    background-color: #f4f5f5;
+    background-color: #2b2d3d;
     section {
         width: 100%;
-        border: 1px solid blue;
     }
     div.side {
         padding: 5px;
         width: 5.5rem;
-        background-color: #3c24066d;
+        background-color: #2a2c3c;
         ul {
             list-style: none;
             li {
@@ -45,7 +39,7 @@ div.main {
 
                 &:hover {
                     cursor: pointer;
-                    color: black;
+                    color: #87dbfc;
                 }
             }
         }
