--- a/Team-Mem/src/main/webapp/WEB-INF/views/include/header.jspf
+++ b/Team-Mem/src/main/webapp/WEB-INF/views/include/header.jspf
@@ -6,7 +6,7 @@
 <c:set var="rootPath" value="${pageContext.request.contextPath}" />
 
 <div class="header">
-	<h3>맴맴</h3>
+	<h3><a href="${rootPath }">맴맴</a></h3>
 <nav class="nav">
 		
 		<sec:authorize access="isAnonymous()">
