--- a/Team-Mem/src/main/webapp/static/css/calendar.css
+++ b/Team-Mem/src/main/webapp/static/css/calendar.css
@@ -61,15 +61,15 @@ section {
 .date {
   width: calc(100% / 7);
 
-  padding: 15px;
-  text-align: right;
+  /* padding: 15px; */
+
+  text-align: center;
   border-bottom: 1px solid white;
   border-left: 1px solid white;
-  color: rgb(225, 107, 248);
+
   font-weight: 900;
   &:hover {
     cursor: pointer;
-    background-color: #696969;
   }
 }
 
@@ -88,10 +88,11 @@ section {
 }
 
 .today {
-  position: relative;
-
-  background-color: #ff0000;
+  border-bottom: 1px solid #ddd;
   color: #ffffff;
+  width: 50%;
+
+  margin: 0 auto;
 }
 /* 왜 안먹히지 */
 /* .today::before {
@@ -107,7 +108,17 @@ section {
   background-color: #ff0000;
   border-radius: 50%;
 } */
-.scheduled {
-  background-color: #f0f0f0; /* 일정이 표시될 셀의 배경색 */
-  color: #333; /* 일정이 표시될 셀의 텍스트 색상 */
+
+div.date {
+  display: flex;
+  flex-direction: column;
+  /* width: 100%; */
+}
+div.title {
+  background-color: #654df1;
+  color: white;
+  width: 100%;
+  border-radius: 2px;
+  margin: 2px auto 0;
+  font-size: 0.8rem;
 }
