--- a/Team-Mem/src/main/webapp/static/css/main.css
+++ b/Team-Mem/src/main/webapp/static/css/main.css
@@ -1,101 +1,140 @@
 @charset "UTF-8";
 div.header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 8px;
-    text-align: left;
-    background-color: #313749;
-    a {
-        color: #77808b;
-    }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  text-align: left;
+  background-color: #303633;
+  border-bottom: 1px solid #d082c5;
+  a {
+    color: #bec7d5;
+  }
 }
 
 nav.nav {
-    margin-left: auto;
-    a {
-        margin: 8px;
-        font-size: 0.9rem;
-        color: #bec7d5;
-    }
+  margin-left: auto;
+  a {
+    margin: 8px;
+    font-size: 0.9rem;
+    color: #bec7d5;
+  }
 }
 
 div.main {
-    display: flex;
-    height: 100%;
-    background-color: #2b2d3d;
-    section {
-        width: 100%;
-    }
+  display: flex;
+  height: 100%;
+  background-color: #303633;
+  section {
+    width: 100%;
+  }
 }
 
 div.side {
-    padding: 5px;
-    width: 5.5rem;
-    background-color: #2a2c3c;
-    ul {
-        list-style: none;
-        li {
-            padding: 5px;
-            margin: 12px 5px;
-            color: white;
-            font-size: 0.8rem;
+  padding: 10px;
+  width: 8rem;
+  background-color: #303633;
+  border-right: 1px solid #d082c5;
+  ul {
+    list-style: none;
+    li {
+      padding: 5px;
+      margin: 12px 8px;
+      color: #86d0eb;
+      font-size: 0.9rem;
 
-            &:hover {
-                cursor: pointer;
-                color: #87dbfc;
-            }
-        }
+      &:hover {
+        cursor: pointer;
+        color: #87dbf4;
+      }
     }
+  }
+}
+
+form.login {
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  div.login_box {
+    div {
+      label {
+        margin-right: 5px;
+      }
+      input {
+        padding: 8px;
+        margin: 3px;
+        border: none;
+        border-radius: 10px;
+      }
+      &:nth-of-type(1) {
+        text-align: center;
+        color: #e46c7a;
+        font-weight: 900;
+        size: 1.3rem;
+      }
+      &:nth-last-of-type(1) {
+        text-align: right;
+      }
+      button {
+        width: 30%;
+      }
+    }
+  }
 }
 
 form.join {
-    width: 40%;
-    margin: 0 auto;
-    div {
-        display: flex;
-        label {
-            flex: 1;
-        }
-        input {
-            flex: 3;
-        }
-        button {
-            margin-left: auto;
-        }
+  width: 40%;
+  margin: 10rem auto;
+  div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    label {
+      flex: 1;
     }
+    input {
+      flex: 3;
+      padding: 8px;
+      margin: 3px;
+      border: none;
+      border-radius: 10px;
+    }
+  }
 }
 
 /* CSS */
 .button-32 {
-    background-color: #77808b;
-    border-radius: 12px;
-    color: #000;
-    cursor: pointer;
-    font-weight: bold;
-    padding: 8px 12px;
-    text-align: center;
-    transition: 200ms;
-    width: 100%;
-    box-sizing: border-box;
-    border: 0;
-    font-size: 0.8rem;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    margin: 8px;
+  background-color: #fcf5e9;
+  border-radius: 12px;
+  color: #000;
+  cursor: pointer;
+  font-weight: bold;
+  padding: 8px 12px;
+  text-align: center;
+  transition: 200ms;
+  width: 100%;
+  box-sizing: border-box;
+  border: 0;
+  font-size: 0.8rem;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin: 8px;
 }
 
 .button-32:not(:disabled):hover,
 .button-32:not(:disabled):focus {
-    outline: 0;
-    background: #313749;
-    color: #bec7d5;
-    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2), 0 3px 8px 0 rgba(0, 0, 0, 0.15);
+  outline: 0;
+  background: #313749;
+  color: #bec7d5;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2),
+    0 3px 8px 0 rgba(0, 0, 0, 0.15);
 }
 
 .button-32:disabled {
-    filter: saturate(0.2) opacity(0.5);
-    -webkit-filter: saturate(0.2) opacity(0.5);
-    cursor: not-allowed;
+  filter: saturate(0.2) opacity(0.5);
+  -webkit-filter: saturate(0.2) opacity(0.5);
+  cursor: not-allowed;
 }
