유효성검사

--- a/Team-Mem/src/main/webapp/static/css/calendar.css
+++ b/Team-Mem/src/main/webapp/static/css/calendar.css
@@ -3,15 +3,19 @@
 section {
   display: flex;
   justify-content: center;
-  align-items: center;
+
   min-height: 80vh;
 }
 
 .calendar {
-  width: 600px;
+  /* width: 600px;
   margin: 50px;
-
-  height: 100%;
+  height: 76%; */
+  /* border: 1px solid red; */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 20rem;
+  grid-auto-rows: 20rem;
 }
 
 .calHeader {
