--- a/Team-Mem/src/main/webapp/static/css/table.css
+++ b/Team-Mem/src/main/webapp/static/css/table.css
@@ -13,7 +13,8 @@ div.list_home {
   div.insert_btn_box {
     display: flex;
     justify-content: right;
-    a.insert {
+    a.insert,
+    button.insert {
       width: 20%;
       font-weight: 800;
       margin: 1rem;
@@ -25,6 +26,7 @@ table.list {
   background: #012b39;
   border-radius: 0.25em;
   border-collapse: collapse;
+  margin-top: 0.5rem;
   th {
     border-bottom: 1px solid #364043;
     color: #8dcdad;
