--- a/Team-Mem/src/main/webapp/static/css/class.css
+++ b/Team-Mem/src/main/webapp/static/css/class.css
@@ -3,15 +3,26 @@
 section {
   display: flex;
   justify-content: center;
-
+  flex-direction: column;
+  overflow: hidden;
   min-height: 80vh;
 }
-
+aside.left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid red; */
+  position: relative;
+  top: -13.5%;
+}
 .calendar {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   width: 600px;
-
   margin: 40px;
   height: 76%;
+
   /* border: 1px solid red; */
 }
 
