--- a/Team-Mem/src/main/webapp/static/css/table.css
+++ b/Team-Mem/src/main/webapp/static/css/table.css
@@ -2,7 +2,9 @@ h1.list_title {
     width: 30%;
     text-align: center;
     padding: 1rem;
-    background-color: #3d4340;
+    margin: 5px;
+    background-color: #e9dcd6;
+    border-radius: 10px;
     font-weight: 600;
     font-size: 1.2rem;
 }
@@ -18,26 +20,27 @@ div.list_home {
             width: 20%;
             font-weight: 600;
             margin: 1rem;
-            border-radius: 5px;
         }
     }
 }
 table.list {
     width: 100%;
-    background: #012b39;
-    border-radius: 0.25em;
+    background-color: #faaca8;
+    background-image: linear-gradient(19deg, #faaca8 0%, #ddd6f3 100%);
+
+    border-radius: 10px;
     border-collapse: collapse;
     margin-top: 0.5rem;
     th {
         border-bottom: 1px solid #364043;
-        color: #8dcdad;
-        font-size: 0.85em;
+        color: #391145;
+        font-size: 1rem;
         font-weight: 600;
         padding: 0.5em 1em;
         text-align: center;
     }
     td {
-        color: #fff;
+        color: #391145;
         text-align: center;
         font-weight: 400;
         padding: 0.65em 1em;
@@ -47,9 +50,11 @@ table.list {
     }
     tbody tr {
         transition: background 0.25s ease;
+        border-radius: 10px;
     }
     tbody tr:hover {
-        background: #014055;
+        background: #e9dcd680;
+        border-radius: 10px;
         cursor: pointer;
     }
 }
@@ -57,6 +62,6 @@ table.list {
     height: 50px;
 }
 .active {
-    background-color: #555;
-    border-bottom: 2px solid #014055;
+    background-color: #e9dcd6;
+    border-radius: 10px;
 }
