--- a/Team-Mem/src/main/webapp/static/css/search.css
+++ b/Team-Mem/src/main/webapp/static/css/search.css
@@ -21,11 +21,9 @@ div.search {
             width: 100px;
         }
     }
-    input.button-32 {
+    button.button-32 {
         width: 50px;
-        height: 25px;
-        padding: 3px;
-        font-weight: 500;
+        padding: 5px;
         border-radius: 10px;
     }
 }
