--- a/Team-Mem/src/main/webapp/static/css/detail.css
+++ b/Team-Mem/src/main/webapp/static/css/detail.css
@@ -15,11 +15,12 @@ hr {
   margin: 15px 0;
 }
 div.card {
-  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2),
-    0 4px 20px 0 rgba(0, 0, 0, 0.19);
-  background-color: #012b39;
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: #e9dcd6;
+  /* background: radial-gradient(circle, #e9dcc9, #e9dcd9); */
   display: flex;
   flex-direction: column;
+  border-radius: 10px;
 }
 div.container {
   padding: 1rem 16px 0.5rem 16px;
@@ -39,13 +40,15 @@ div.info {
     }
   }
 }
-
 div.info.head {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  background-color: #3d4340;
+  background-color: #faaca8;
+  background-image: linear-gradient(19deg, #fccecb 20%, #e2daff 100%);
+
+  border-radius: 10px;
   padding: 8px;
   strong {
     flex: 1;
@@ -55,7 +58,7 @@ div.info.head {
     flex: 1;
     text-align: center;
     padding-bottom: 2px;
-    border-bottom: 1px solid #313749;
+    border-bottom: 1px solid #e9dcd6;
   }
   a {
     flex: 1;
@@ -63,9 +66,9 @@ div.info.head {
 }
 a.message_btn {
   width: 20%;
-  border-radius: 0;
-  background-color: #313749;
-  color: #bec7d5;
+  border-radius: 10px;
+  background-color: #e9dcd6;
+  color: #391145;
   font-weight: 200;
   margin: 0;
 }
@@ -76,8 +79,9 @@ div.detail.btn_box {
     width: 30%;
     margin: 5px auto;
     border-radius: 0;
-    background-color: #313749;
-    color: #bec7d5;
+    background-color: #e9dcd6;
+    color: #391145;
     font-weight: 200;
+    border-radius: 10px;
   }
 }
