--- a/Team-Mem/src/main/webapp/static/css/input.css
+++ b/Team-Mem/src/main/webapp/static/css/input.css
@@ -1,87 +1,108 @@
 .input_div {
-    width: 50%;
-    margin: 20px auto;
-    border-radius: 10px;
+  width: 50%;
+  margin: 20px auto;
+  border-radius: 10px;
 
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
 }
 
 .input_box {
-    padding: 20px;
-    border-radius: 10px;
-    background-color: #e9dcd6;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #e9dcd6;
+  background-image: linear-gradient(to right, #e9dcd6, #ece1da); /* 그라데이션 */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .input_box label {
-    display: block;
-    width: 90%;
-    text-align: left;
-    margin-bottom: 10px;
-    font-weight: bold;
+  display: block;
+  width: 90%;
+  text-align: left;
+  margin-bottom: 10px;
+  font-weight: bold;
 }
 .input_box input {
-    width: 90%;
-    padding: 8px;
-    margin-bottom: 15px;
-    color: #391145;
-    background-color: #e9dcd6;
-    border: none;
-    outline: none;
-    border-bottom: 1px solid #aaa;
-    transition: background-color 0.3s ease;
+  width: 90%;
+  padding: 8px;
+  margin-bottom: 15px;
+  color: #391145;
+  background-color: #e9dcd6;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid #aaa;
+  transition: background-color 0.3s ease;
 
-    &:focus {
-        background-color: #d1c5c0;
-        border-radius: 10px;
-    }
+  &:focus {
+    background-color: #d1c5c0;
+    border-radius: 10px;
+  }
 }
 
 .input_box input.insert {
-    width: 20%;
-    border: none;
-    padding: 10px 12px;
-    cursor: pointer;
-    font-size: 0.8rem;
-    background-color: #fff;
+  width: 20%;
+  border: none;
+  padding: 10px 12px;
+  cursor: pointer;
+  font-size: 0.8rem;
+  background-color: #fff;
 }
 
 .input_box .ticket.error {
-    color: #ff4f33;
-    font-size: 14px;
-    margin-bottom: 10px;
+  color: #ff4f33;
+  font-size: 14px;
+  margin-bottom: 10px;
 }
 div.selectBox {
-    width: 90%;
+  width: 90%;
 }
 select {
-    width: 100%;
-    padding: 0.3rem;
-    text-align: center;
-    font-family: inherit;
-    border-radius: 0px;
-    border: none;
-    outline: none;
-    background-color: #e9dcd6;
-    border-bottom: 1px solid #eee;
-    color: white;
-    margin: 15px 0;
+  width: 100%;
+  padding: 0.3rem;
+  text-align: center;
+  font-family: inherit;
+  border-radius: 0px;
+  border: none;
+  outline: none;
+  background-color: #e9dcd6;
+  border-bottom: 1px solid #eee;
+  color: white;
+  margin: 15px 0;
 
-    &:focus {
-        border-bottom: 1px solid #eee;
-    }
+  &:focus {
+    border-bottom: 1px solid #eee;
+  }
 }
 
 textarea {
-    width: 90%;
-    border: none;
-    outline: none;
-    margin: 8px 0;
-    background-color: #fff;
-    border: 1px solid white;
-    color: #391145;
-    padding: 12px;
-    resize: none;
+  width: 90%;
+  border: none;
+  outline: none;
+  margin: 8px 0;
+  background-color: #fff;
+  border: 1px solid white;
+  color: #391145;
+  padding: 12px;
+  resize: none;
+}
+
+/* <div class="palette">
+<div class="color1"></div>
+<div class="color2"></div>
+<div class="color3"></div>
+<div class="color4"></div>
+<div class="color5"></div> */
+div.palette {
+  display: flex;
+}
+.color1,
+.color2,
+.color3,
+.color4,
+.color5 {
+  width: 50px;
+  height: 50px;
+  border: 1px solid red;
+  margin-right: 5px;
 }
