--- a/Team-Mem/src/main/webapp/static/css/table.css
+++ b/Team-Mem/src/main/webapp/static/css/table.css
@@ -1,67 +1,68 @@
 h1.list_title {
-    width: 30%;
-    text-align: center;
-    padding: 1rem;
-    margin: 5px;
-    background-color: #e9dcd6;
-    border-radius: 10px;
-    font-weight: 600;
-    font-size: 1.2rem;
+  width: 30%;
+  text-align: center;
+  padding: 1rem;
+  margin: 5px;
+  background-color: #e6cadd;
+  border-radius: 10px;
+  font-weight: 600;
+  font-size: 1.2rem;
 }
 div.list_home {
-    width: 80%;
-    margin: 0.8rem auto;
+  width: 80%;
+  margin: 0.8rem auto;
 
-    div.insert_btn_box {
-        display: flex;
-        justify-content: right;
-        a.insert,
-        button.insert {
-            width: 20%;
-            font-weight: 600;
-            margin: 1rem;
-        }
+  div.insert_btn_box {
+    display: flex;
+    justify-content: right;
+    a.insert,
+    button.insert {
+      width: 20%;
+      font-weight: 600;
+      margin: 1rem;
     }
+  }
 }
 table.list {
-    width: 100%;
-    background-color: #faaca8;
-    background-image: linear-gradient(19deg, #faaca8 0%, #ddd6f3 100%);
-
+  width: 100%;
+  /* background-color: #faaca8;
+  background-image: linear-gradient(19deg, #faaca8 0%, #ddd6f3 100%); */
+  background-color: #faaca8;
+  background-image: linear-gradient(19deg, #fccecb 20%, #e2daff 100%);
+  border-radius: 10px;
+  border-collapse: collapse;
+  margin-top: 0.5rem;
+  th {
+    border-bottom: 1px solid #364043;
+    color: #391145;
+    font-size: 1rem;
+    font-weight: 600;
+    padding: 0.5em 1em;
+    text-align: center;
+  }
+  td {
+    color: #391145;
+    text-align: center;
+    font-weight: 400;
+    padding: 0.65em 1em;
+  }
+  .disabled td {
+    color: #4f5f64;
+  }
+  tbody tr {
+    transition: background 0.25s ease;
     border-radius: 10px;
-    border-collapse: collapse;
-    margin-top: 0.5rem;
-    th {
-        border-bottom: 1px solid #364043;
-        color: #391145;
-        font-size: 1rem;
-        font-weight: 600;
-        padding: 0.5em 1em;
-        text-align: center;
-    }
-    td {
-        color: #391145;
-        text-align: center;
-        font-weight: 400;
-        padding: 0.65em 1em;
-    }
-    .disabled td {
-        color: #4f5f64;
-    }
-    tbody tr {
-        transition: background 0.25s ease;
-        border-radius: 10px;
-    }
-    tbody tr:hover {
-        background: #e9dcd680;
-        border-radius: 10px;
-        cursor: pointer;
-    }
+  }
+  tbody tr:hover {
+    background: #e9dcd680;
+    border-radius: 10px;
+    cursor: pointer;
+  }
 }
 #colorPicker {
-    height: 50px;
+  height: 50px;
 }
 .active {
-    background-color: #e9dcd6;
-    border-radius: 10px;
+  background-color: #e9dcd6;
+  border-radius: 10px;
 }
