--- a/Team-Mem/src/main/webapp/static/css/input.css
+++ b/Team-Mem/src/main/webapp/static/css/input.css
@@ -67,7 +67,7 @@ select {
   outline: none;
   background-color: #e9dcd6;
   border-bottom: 1px solid #eee;
-  color: white;
+  color: #391145;
   margin: 15px 0;
 
   &:focus {
@@ -87,22 +87,55 @@ textarea {
   resize: none;
 }
 
-/* <div class="palette">
-<div class="color1"></div>
-<div class="color2"></div>
-<div class="color3"></div>
-<div class="color4"></div>
-<div class="color5"></div> */
 div.palette {
   display: flex;
+  margin-bottom: 10px;
 }
 .color1,
 .color2,
 .color3,
 .color4,
-.color5 {
-  width: 50px;
-  height: 50px;
-  border: 1px solid red;
+.color5,
+.color6,
+.color7,
+.color8 {
+  width: 30px;
+  height: 30px;
   margin-right: 5px;
+  border-radius: 50%;
+  &:hover {
+    cursor: pointer;
+  }
+}
+.color1 {
+  background-color: #fcd8c9;
+}
+.color2 {
+  background-color: #e3ebd9;
+}
+.color3 {
+  background-color: #f4d1db;
+}
+.color4 {
+  background-color: #cbcedc;
+}
+.color5 {
+  background-color: #f7c8cb;
+}
+.color6 {
+  background-color: #b6c7cf;
+}
+.color7 {
+  background-color: #f3d0cd;
+}
+.color8 {
+  background-color: #c8d8b4;
+}
+div.schedule {
+  display: flex;
+  justify-content: center;
+  width: 50%;
+  input {
+    margin-right: 4px;
+  }
 }
