--- a/Team-Mem/src/main/webapp/static/css/input.css
+++ b/Team-Mem/src/main/webapp/static/css/input.css
@@ -111,7 +111,7 @@ div.palette {
   background-color: #fcd8c9;
 }
 .color2 {
-  background-color: #e3ebd9;
+  background-color: #ef9297;
 }
 .color3 {
   background-color: #f4d1db;
