--- a/Team-Mem/src/main/webapp/static/css/teacher_detail.css
+++ b/Team-Mem/src/main/webapp/static/css/teacher_detail.css
@@ -28,11 +28,21 @@ div.card {
 div.teacher_info {
     display: flex;
     flex-direction: column;
-    strong {
-        flex: 1;
-    }
-    span {
-        flex: 2;
+    width: 50%;
+    text-align: center;
+
+    div {
+        display: flex;
+        strong {
+            flex: 1;
+            font-size: 1rem;
+            padding: 4px;
+        }
+        span {
+            flex: 2;
+            font-size: 1rem;
+            padding: 4px;
+        }
     }
 }
 
@@ -43,8 +53,21 @@ div.img_box {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    div {
+        width: 60%;
+        margin: 1rem 3rem;
+        .pro {
+            color: #231e39;
+            background-color: #febb0b;
+            border-radius: 3px;
+            font-size: 14px;
+            font-weight: bold;
+            padding: 3px 7px;
+        }
+    }
     img {
         background-color: #391145;
         border-radius: 50%;
@@ -116,4 +139,101 @@ div.detail.btn_box {
         font-weight: 200;
         border-radius: 10px;
     }
+}
+
+/*-----------------------*/
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
+h3 {
+    margin: 10px 0;
+}
+
+h6 {
+    margin: 5px 0;
+    text-transform: uppercase;
+}
+
+p {
+    font-size: 14px;
+    line-height: 21px;
+}
+
+.card-container {
+    background-color: #231e39;
+    border-radius: 5px;
+    box-shadow: 0px 10px 20px -10px rgba(0, 0, 0, 0.75);
+    color: #b3b8cd;
+    padding-top: 30px;
+    position: relative;
+    width: 350px;
+    max-width: 100%;
+    text-align: center;
+}
+
+.card-container .round {
+    border: 1px solid #03bfcb;
+    border-radius: 50%;
+    padding: 7px;
+}
+
+button.primary {
+    background-color: #03bfcb;
+    border: 1px solid #03bfcb;
+    border-radius: 3px;
+    color: #231e39;
+    font-family: Montserrat, sans-serif;
+    font-weight: 500;
+    padding: 10px 25px;
+}
+
+button.primary.ghost {
+    background-color: transparent;
+    color: #02899c;
+}
+
+.skills {
+    background-color: #1f1a36;
+    text-align: left;
+    padding: 15px;
+    margin-top: 30px;
+}
+
+.skills ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.skills ul li {
+    border: 1px solid #2d2747;
+    border-radius: 2px;
+    display: inline-block;
+    font-size: 12px;
+    margin: 0 7px 7px 0;
+    padding: 7px;
+}
+
+footer {
+    background-color: #222;
+    color: #fff;
+    font-size: 14px;
+    bottom: 0;
+    position: fixed;
+    left: 0;
+    right: 0;
+    text-align: center;
+    z-index: 999;
+}
+
+footer p {
+    margin: 10px 0;
+}
+
+footer i {
+    color: red;
+}
+
+footer a {
+    color: #3c97bf;
+    text-decoration: none;
 }
