--- a/Team-Mem/src/main/webapp/static/css/notice_detail.css
+++ b/Team-Mem/src/main/webapp/static/css/notice_detail.css
@@ -1,46 +1,49 @@
-.post-container {
-    background-color: #fff;
-    border-radius: 10px;
-    padding: 20px;
-    margin-bottom: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+td.content {
+    display: none;
+}
+th.content {
+    display: none;
+}
+/* 모달 배경 */
+.modal-backdrop {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* 반투명한 검은 배경 */
+    z-index: 998; /* 다른 요소보다 앞에 표시되도록 */
 }
 
-.post-container strong {
-    font-weight: bold;
-    color: #333;
-}
-
-.post-container span {
+.modal-backdrop.show {
     display: block;
-    margin-top: 15px;
 }
 
-.post-container span a {
-    text-decoration: none;
-    color: #007bff;
-    margin-right: 15px;
-    padding: 8px 15px;
-    border: 2px solid #007bff;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+/* 모달 */
+.detail {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    z-index: 999; /* 다른 요소보다 앞에 표시되도록 */
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* 그림자 효과 */
 }
 
-.post-container span a:hover {
-    background-color: #007bff;
-    color: #fff;
+.detail.show {
+    display: block;
+    width: 50%;
+    border-radius: 10px;
 }
-
-.post-container span a:last-child {
-    margin-right: 0;
-}
-
-.post-container span a.delete-button {
-    color: #dc3545;
-    border-color: #dc3545;
-}
-
-.post-container span a.delete-button:hover {
-    background-color: #dc3545;
-    color: #fff;
+div.btn_box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    button {
+        width: 30%;
+        background-color: #e6cadd;
+    }
 }
