--- a/Team-Mem/src/main/webapp/static/css/calendar.css
+++ b/Team-Mem/src/main/webapp/static/css/calendar.css
@@ -147,7 +147,7 @@ div.date {
 }
 span.title {
   /* background-color: #654df1; */
-  color: white;
+  color: #391145;
   width: 100%;
   border-radius: 2px;
   margin: 2px auto 0;
