--- a/Team-Mem/src/main/webapp/static/css/class.css
+++ b/Team-Mem/src/main/webapp/static/css/class.css
@@ -15,7 +15,7 @@ aside.left {
   display: flex;
   flex-direction: row;
   flex: 1;
-  height: 95%;
+  /* height: 95%; */
 }
 aside.right {
   overflow: auto;
@@ -26,15 +26,16 @@ aside.right {
   flex: 1;
   /* justify-content: center; */
   margin-top: 6.5rem;
-  background-color: #faaca8;
-  background-image: linear-gradient(19deg, #fccecb 20%, #e2daff 100%);
+  background-color: #e6cadd;
   border-radius: 10px;
   margin-right: 2rem;
   div.title {
     /* border: 1px solid black; */
+    display: flex;
+    flex-direction: column;
     margin: 12px 8px 0 8px;
     padding: 8px;
-    background-color: #ecc9c7;
+    background-color: #e9dcd6;
     /* background-image: linear-gradient(19deg, #fccecb 20%, #e2daff 100%); */
     border-radius: 10px;
     font-weight: 600;
@@ -45,6 +46,14 @@ aside.right {
     article.content {
       padding: 8px 0;
     }
+    article.teacherName {
+      width: 20%;
+      background-color: #e2daff;
+      padding: 8px;
+      font-size: 0.9rem;
+      text-align: center;
+      border-radius: 10px;
+    }
   }
 }
 aside.right::-webkit-scrollbar {
@@ -54,7 +63,7 @@ aside.right::-webkit-scrollbar {
   display: flex;
   flex-direction: column;
   width: 600px;
-  height: 76%;
+  height: 100%;
   justify-content: center;
   margin: 40px;
 }
@@ -101,7 +110,27 @@ aside.right::-webkit-scrollbar {
   flex-flow: row wrap;
   height: 450px;
   border-top: 1px solid #faaca8;
+  overflow: auto;
   /* border-right: 1px solid #faaca8; */
+}
+
+.dates::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  border-radius: 10px;
+}
+
+.dates:hover::-webkit-scrollbar {
+  display: block;
+}
+
+.dates::-webkit-scrollbar-thumb {
+  background-color: #e9dcd6;
+  border-radius: 5px;
+}
+
+.dates::-webkit-scrollbar-thumb:hover {
+  background-color: #faaca8;
 }
 
 .date {
@@ -146,7 +175,7 @@ div.date {
 }
 span.title {
   /* background-color: #654df1; */
-  color: white;
+  color: #391145;
   width: 100%;
   border-radius: 2px;
   margin: 2px auto 0;
@@ -155,4 +184,18 @@ span.title {
 .title-container {
   display: flex;
   flex-direction: column;
+}
+
+.go-today,
+.go-prev,
+.go-next {
+  font-weight: 700;
+}
+
+.cal_wrapper {
+  height: 100%;
+  /* background-color: #e6cadd; */
+  border: 3px dashed #e6cadd;
+  padding: 8px;
+  border-radius: 10px;
 }
