--- a/Team-Mem/src/main/webapp/static/css/dash.css
+++ b/Team-Mem/src/main/webapp/static/css/dash.css
@@ -16,6 +16,13 @@
   justify-content: center;
   align-items: center;
   margin: 10px;
+  font-weight: 900;
+  span {
+    font-weight: 900;
+  }
+  p {
+    font-weight: 700;
+  }
 }
 .total_box {
   display: flex;
@@ -92,4 +99,23 @@
   .right {
     flex: 1;
   }
+}
+
+.notice::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+  border-radius: 10px;
+}
+
+.notice:hover::-webkit-scrollbar {
+  display: block;
+}
+
+.notice::-webkit-scrollbar-thumb {
+  background-color: #e9dcd6;
+  border-radius: 5px;
+}
+
+.notice::-webkit-scrollbar-thumb:hover {
+  background-color: #faaca8;
 }
