--- a/Team-Mem/src/main/webapp/static/css/class.css
+++ b/Team-Mem/src/main/webapp/static/css/class.css
@@ -20,22 +20,22 @@ aside.left {
 aside.right {
   overflow: auto;
   display: flex;
-  height: 89%;
+  height: 93%;
   flex-direction: column;
   /* align-items: stretch; */
   flex: 1;
   /* justify-content: center; */
-  margin-top: 6.5rem;
-  background-color: #e6cadd;
+  margin-top: 5.2rem;
+  border: 3px dashed #e6cadd;
   border-radius: 10px;
   margin-right: 2rem;
   div.title {
     /* border: 1px solid black; */
+    background-color: #e9dcd6;
     display: flex;
     flex-direction: column;
     margin: 12px 8px 0 8px;
     padding: 8px;
-    background-color: #e9dcd6;
     /* background-image: linear-gradient(19deg, #fccecb 20%, #e2daff 100%); */
     border-radius: 10px;
     font-weight: 600;
