--- a/Team-Mem/src/main/webapp/static/css/table.css
+++ b/Team-Mem/src/main/webapp/static/css/table.css
@@ -95,3 +95,10 @@ table.list {
 .table_div::-webkit-scrollbar-thumb:hover {
   background-color: #faaca8;
 }
+
+tr.total {
+  border-top: 1px dashed #364043;
+  td {
+    font-weight: 800;
+  }
+}
