--- a/Team-Mem/src/main/webapp/static/css/main.css
+++ b/Team-Mem/src/main/webapp/static/css/main.css
@@ -92,10 +92,16 @@ div.side {
   }
 }
 
-div.login_wrap,
-div.join_wrap {
+div.login_wrap {
   height: 100vh;
 
+  display: flex;
+  justify-content: center;
+  background-color: #faaca8;
+  background-image: linear-gradient(19deg, #fccecb 20%, #e2daff 100%);
+}
+div.join_wrap {
+  height: 94vh;
   display: flex;
   justify-content: center;
   background-color: #faaca8;
@@ -240,7 +246,4 @@ div.authenticated {
 input[name="c_tel"],
 input[name="c_addr"] {
   display: none;
-  &:focus {
-    transition: 0.8s;
-  }
 }
