--- a/Team-Mem/src/main/webapp/static/css/main.css
+++ b/Team-Mem/src/main/webapp/static/css/main.css
@@ -92,16 +92,10 @@ div.side {
   }
 }
 
-div.login_wrap {
-  height: 100vh;
-
-  display: flex;
-  justify-content: center;
-  background-color: #faaca8;
-  background-image: linear-gradient(19deg, #fccecb 20%, #e2daff 100%);
-}
+div.login_wrap,
 div.join_wrap {
-  height: 94vh;
+  height: 100%;
+
   display: flex;
   justify-content: center;
   background-color: #faaca8;
@@ -161,17 +155,16 @@ form.join {
   justify-content: center;
   align-items: center;
   border-radius: 10px;
-  h1 {
+
+  h1.head {
     color: #bec7d5;
     font-weight: 200;
     font-size: 2rem;
     padding: 5px 12px;
-    margin: 4px 0 2rem 0;
+    margin: 1rem 0;
     border-bottom: 1px solid;
   }
-  label {
-    flex: 1;
-  }
+
   div {
     width: 100%;
     display: flex;
@@ -183,7 +176,6 @@ form.join {
     }
   }
   input {
-    flex: 3;
     padding: 12px;
     border: none;
     outline: none;
@@ -191,10 +183,11 @@ form.join {
     margin: 5px auto;
     width: 80%;
     color: white;
+    font-size: 0.8rem;
   }
   button {
     width: 30%;
-    margin: 5px auto;
+    margin: 1.5rem auto 0 auto;
     font-weight: 200;
   }
 }
@@ -245,5 +238,15 @@ div.authenticated {
 }
 input[name="c_tel"],
 input[name="c_addr"] {
-  display: none;
+  /* display: none; */
 }
+/* div.hidden {
+  border: 1px solid red;
+  opacity: 0;
+  height: 23%;
+}
+.join_btn {
+  border: 1px solid red;
+  position: relative;
+  top: -20%;
+} */
