--- a/Team-Mem/src/main/webapp/static/css/dash.css
+++ b/Team-Mem/src/main/webapp/static/css/dash.css
@@ -45,6 +45,8 @@
     height: 100%;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    white-space: nowrap;
   }
 }
 .chart {
